# min-bevy-dep

./: Cargo.toml
