[package]
name = "min-bevy-dep"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/practicalrs/bevy", branch = "main" }

[profile.dev]
debug = 0
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
